--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "user-register",
+  "name": "class-api",
   "version": "1.0.0",
-  "main": "server.js",
-  "type": "commonjs",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,17 +10,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@sendgrid/mail": "^8.1.3",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.4.5",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.2",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.4",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "winston": "^3.13.1"
+    "uuid": "^10.0.0"
   }
 }
+
+{
+  "name": "Yoga Basics",
+  "price": 50,
+  "optionsAvailable": 10
+}
+
