--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.651.1",
     "@sendgrid/mail": "^8.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
