--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.651.1",
-    "@sendgrid/mail": "^8.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "firebase-admin": "^13.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mjml": "^4.15.3",
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
